<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="31dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/output1name"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:text="@string/output1name"
        android:textAlignment="center"
        android:textColor="#6C6A6A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/output1"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <TextView
        android:id="@+id/output1"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="80dp"
        android:text="@string/output1"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/output2"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="60dp"
        android:text="@string/output2"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output1" />

    <TextView
        android:id="@+id/output3"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="60dp"
        android:text="@string/output3"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output2" />

    <TextView
        android:id="@+id/output2name"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:text="@string/output2name"
        android:textAlignment="center"
        android:textColor="#6C6A6A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/output2"
        app:layout_constraintTop_toBottomOf="@+id/output1name" />

    <TextView
        android:id="@+id/output3name"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:text="@string/output3name"
        android:textAlignment="center"
        android:textColor="#6C6A6A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/output3"
        app:layout_constraintTop_toBottomOf="@+id/output2name" />

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output3"
        app:srcCompat="@drawable/bmesur" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/output3"
        app:srcCompat="@drawable/btherm" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/output3name"
        app:srcCompat="@drawable/bscale" />
</androidx.constraintlayout.widget.ConstraintLayout>